--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "enum-keys-values-entries",
   "version": "1.0.0",
-  "description": "Get just the keys (left hand side), or values (right hand side) of a TypeScript enum",
+  "description": "Get just the keys (left hand side), values (right hand side), or entries (tuple of [key, value]) of a TypeScript enum",
   "main": "index.js",
   "keywords": ["enum", "keys", "values", "entries", "typescript", "Enum.values", "Enum.keys", "Enum.entries"],
   "author": "Ben Meyrick <bameyrick@gmail.com>",
