--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "keywords": ["enum", "keys", "values", "entries", "typescript", "Enum.values", "Enum.keys", "Enum.entries"],
   "author": "Ben Meyrick <bameyrick@gmail.com>",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bameyrick/enum-keys-values-entries.git"
+  },
   "scripts": {
     "build": "npm run lint && tsc -p tsconfig.json --outDir dist/",
     "test": "KARMA_SINGLE_RUN=false karma start ./karma.conf.js",
