Correct main and types

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "enum-keys-values-entries",
   "version": "1.0.0",
   "description": "Get just the keys (left hand side), values (right hand side), or entries (tuple of [key, value]) of a TypeScript enum",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "keywords": ["enum", "keys", "values", "entries", "typescript", "Enum.values", "Enum.keys", "Enum.entries"],
   "author": "Ben Meyrick <bameyrick@gmail.com>",
   "license": "ISC",
