--- a/package.json
+++ b/package.json
@@ -2,8 +2,15 @@
   "name": "enum-keys-values-entries",
   "version": "1.0.0",
   "description": "Get just the keys (left hand side), values (right hand side), or entries (tuple of [key, value]) of a TypeScript enum",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/mjs/index.js",
+  "types": "./dist/mjs/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/mjs/index.js",
+      "require": "./dist/cjs/index.js"
+    }
+  },
   "keywords": ["enum", "keys", "values", "entries", "typescript", "Enum.values", "Enum.keys", "Enum.entries"],
   "author": "Ben Meyrick <bameyrick@gmail.com>",
   "license": "ISC",
@@ -12,13 +19,14 @@
     "url": "git+https://github.com/bameyrick/enum-keys-values-entries.git"
   },
   "scripts": {
-    "build": "npm run lint && tsc -p tsconfig.json --outDir dist/",
+    "build": "npm run tidy-clean && npm run lint && tsc -p tsconfig.mjs.json && cpy package.mjs.json dist/mjs --rename package.json && tsc -p tsconfig.cjs.json && cpy package.cjs.json dist/cjs --rename package.json",
     "test": "KARMA_SINGLE_RUN=false karma start ./karma.conf.js",
     "test-single": "npm run tidy-clean && npm run lint && karma start ./karma.conf.js",
     "lint": "eslint . --ext .ts",
     "tidy-clean": "rm -rf dist coverage",
     "prepare-husky": "husky install",
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "upgrade-interactive": "npm-check --update"
   },
   "lint-staged": {
     "*.ts": [
@@ -31,26 +39,28 @@
   },
   "devDependencies": {
     "@types/jasmine": "^3.10.2",
-    "@types/node": "^17.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
-    "@typescript-eslint/parser": "^5.8.0",
+    "@types/node": "^17.0.41",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
     "codecov": "^3.8.3",
-    "eslint": "^8.5.0",
-    "eslint-config-prettier": "^8.3.0",
+    "cpy-cli": "^4.1.0",
+    "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.0",
     "jasmine-core": "^3.10.1",
-    "karma": "^6.3.9",
-    "karma-chrome-launcher": "^3.1.0",
+    "karma": "^6.3.20",
+    "karma-chrome-launcher": "^3.1.1",
     "karma-cli": "^2.0.0",
-    "karma-coverage": "^2.1.0",
+    "karma-coverage": "^2.2.0",
     "karma-jasmine": "^4.0.1",
-    "karma-spec-reporter": "^0.0.32",
-    "karma-typescript": "^5.5.2",
-    "karma-typescript-es6-transform": "^5.5.2",
+    "karma-spec-reporter": "^0.0.34",
+    "karma-typescript": "^5.5.3",
+    "karma-typescript-es6-transform": "^5.5.3",
     "lint-staged": "^12.1.3",
-    "prettier": "^2.5.1",
+    "npm-check": "^5.9.2",
+    "prettier": "^2.6.2",
     "puppeteer": "^13.0.0",
-    "typescript": "~4.4.4"
+    "typescript": "^4.7.3"
   }
 }
