--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm run lint
 
       - name: Run the tests 🧪
-        run: npm run karma start ./karma.conf.js
+        run: npm run test-single
 
       - name: Upload coverage to Codecov 📈
         uses: codecov/codecov-action@v3
